移除对CEI的支持及相关依赖配置